--- a/itis3135/SamantaCorp.com/index.html
+++ b/itis3135/SamantaCorp.com/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script><script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Samanta Corp</title>
@@ -37,12 +37,13 @@
     header img {
       vertical-align: middle;
       border-radius: 50%;
+      margin-bottom: 1rem;
     }
 
     h1 {
       display: inline-block;
       font-size: 2rem;
-      margin: 0 0 0 1rem;
+      margin: 0;
       vertical-align: middle;
       color: var(--text-light);
     }
@@ -75,7 +76,7 @@
     }
 
     ul.services li::before {
-      
+      content: "• ";
       color: var(--highlight);
       font-weight: bold;
     }
@@ -99,16 +100,23 @@
   </style>
 </head>
 <body>
+
   <header>
-    <!-- Replace with your own logo (resize to match width/height below) -->
-    <!-- Logo source: public domain / CC0 image -->
+    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=300&q=80" 
+         alt="Samanta Corp Design Studio" 
+         width="120" height="120">
     <h1>Samanta Corp</h1>
     <p class="tagline">Where Design Meets Innovation</p>
   </header>
 
   <main>
     <h2>Samanta Corp's Services</h2>
-    <p>Samanta Corp is a web design and consulting studio focused on doing the best for our customers</p>
+
+    <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=900&q=80" 
+         alt="Creative design team workspace" 
+         style="width:100%; border-radius: 1rem; margin-bottom: 1rem;">
+
+    <p>Samanta Corp is a web design and consulting studio focused on doing the best for our customers.</p>
 
     <ul class="services">
       <li>Excellent High Quality Designs</li>
@@ -132,5 +140,6 @@
   <footer>
     <p>&copy; Samanta Corp ©2025 — Building a Greater Web</p>
   </footer>
+
 </body>
 </html>
