--- a/itis3135/ClientProject/Services.html
+++ b/itis3135/ClientProject/Services.html
@@ -19,19 +19,25 @@
             <h2>Our Services</h2>
             <div id="accordion">
                 <h3>Lawn Mowing</h3>
-                <div><p>Regular mowing to keep your lawn healthy. Starting at $30 per visit.</p></div>
+                <div>
+                    <p>Regular mowing to keep your lawn healthy. Starting at $30 per visit.</p>
+                </div>
 
                 <h3>Landscaping</h3>
-                <div><p>Custom landscaping projects, including planting, stonework, and design. Pricing varies.</p></div>
+                <div>
+                    <p>Custom landscaping projects, including planting, stonework, and design. Pricing varies.</p>
+                </div>
 
                 <h3>Seasonal Cleanup</h3>
-                <div><p>Leaf removal, debris cleanup, and garden preparation. $50 per session.</p></div>
+                <div>
+                    <p>Leaf removal, debris cleanup, and garden preparation. $50 per session.</p>
+                </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <!-- footer can be added later -->
+        <div data-include="footer.html"></div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
