--- a/itis3135/ClientProject/Contact.html
+++ b/itis3135/ClientProject/Contact.html
@@ -70,7 +70,7 @@
     </main>
 
     <footer>
-        <!-- footer can be added later -->
+        <div data-include="footer.html"></div>
     </footer>
 
     <script src="HTMLInclude.min.js"></script>
