--- a/itis3135/ClientProject/Testimonials.html
+++ b/itis3135/ClientProject/Testimonials.html
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        <!-- footer can be added later -->
+        <div data-include="footer.html"></div>
     </footer>
 
     <script src="HTMLInclude.min.js"></script>
