--- a/itis3135/ClientProject/about.html
+++ b/itis3135/ClientProject/about.html
@@ -66,7 +66,7 @@
     </main>
 
     <footer>
-        <!-- Footer is dynamically loaded later if needed -->
+        <div data-include="footer.html"></div>
     </footer>
 
     <!-- JS Scripts -->
