--- a/itis3135/ClientProject/index.html
+++ b/itis3135/ClientProject/index.html
@@ -26,7 +26,7 @@
     </main>
 
     <footer>
-        <!-- footer can be added later -->
+        <div data-include="footer.html"></div>
     </footer>
 
     <script src="HTMLInclude.min.js"></script>
